Добавил обработку ошибок
